Adicionado suporte ao Java 11

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@
 server.port=9091
 
 #mongodb
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.host=den1.mongo1.gear.host
+spring.data.mongodb.port=27001
 spring.data.mongodb.database=seguradora
+spring.data.mongodb.username=seguradora
+spring.data.mongodb.password=Fd35630!-1Js
